# portfolio-pulse

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CODEX_HANDOFF.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  RUNBOOK.md  cowork.yaml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
app/: config.py  event_bus.py  main.py  telemetry.py
app/agents/: orchestrator.py  prompts.py  setup.py  tools.py
app/api/: admin.py  auth.py  dashboard_api.py  scim.py
app/mcp_servers/: slack_server.py
app/models/: base.py  entities.py
app/scripts/: init_db.py  seed.py
app/services/: anomaly_data.py  policies.py  rbac.py  scim_schemas.py
app/services/mocks/: egnyte.py  pitchbook.py
app/static/: index.html
skills/lp-update-drafter/: SKILL.md  instructions.md  script.py
skills/lp-update-drafter/evals/: _helpers.py  conftest.py  test_eval_endowment_tone.py  test_eval_family_office_tone.py  test_eval_invalid_persona.py  test_eval_pension_fund_tone.py  test_eval_word_count_range.py
skills/portco-anomaly-monitor/: SKILL.md  instructions.md  script.py
skills/portco-anomaly-monitor/evals/: conftest.py  test_eval_burn_spike.py  test_eval_invalid_metric.py  test_eval_normal_growth.py  test_eval_revenue_collapse.py  test_eval_unknown_tenant.py
tests/: conftest.py  conftest_scim.py  smoke_slack.py  test_auth.py  test_dashboard_api.py  test_main_security.py  test_mocks.py  test_orchestrator_helpers.py  test_policies.py  test_rbac.py  test_scim.py  test_tools.py
