[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-pulse"
version = "0.1.0"
description = "Multi-tenant portfolio monitoring for PE firms"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "anthropic>=0.34",
    "python-dotenv>=1.0",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27",
    "httpx>=0.27",
    "mcp>=0.9",
    "slack-sdk>=3.32",
    "aiohttp>=3.10",
    "faker>=28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/agents/prompts.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
